--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 python:
-  - "2.5"
   - "2.6"
   - "2.7"
+  - "3.3"
 before_install:
   - export PIP_USE_MIRRORS=true
   - export PIP_INDEX_URL=https://simple.crate.io/
@@ -14,3 +14,4 @@ script:
 env:
   - DJANGO=1.3.3
   - DJANGO=1.4.1
+  - DJANGO=1.5rc1
