Switch to using invoke instead of Make.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,6 @@ include README.rst
 include CHANGES.rst
 include .travis.yml
 include manage.py
-include Makefile
+include tasks.py
 include requirements/tests.txt
 recursive-include docs *
