--- a/.travis.yml
+++ b/.travis.yml
@@ -8,21 +8,17 @@ install:
   - pip install -e .
   - pip install -r requirements/tests.txt Django==$DJANGO
 script:
-  - make test
+  - inv test
 env:
-  - DJANGO=1.3.7
   - DJANGO=1.4.5
   - DJANGO=1.5.1
+  - DJANGO=stable/1.6.x
 matrix:
   exclude:
     - python: 3.2
       env: DJANGO=1.4.5
-    - python: 3.2
-      env: DJANGO=1.3.7
     - python: 3.3
       env: DJANGO=1.4.5
-    - python: 3.3
-      env: DJANGO=1.3.7
 branches:
   except:
     templates/1.5.x
