Fixed broken package files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ extra_files =
     AUTHORS
     .travis.yml
     manage.py
-    Makefile
+    tasks.py
     requirements/tests.txt
 
 [backwards_compat]
