--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-configurations
-version = 0.4a1
+version = 0.4
 author = Jannis Leidel
 author-email = jannis@leidel.info
 summary = A helper for organizing Django settings.
