--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - 3.3
 install:
   - pip install -e .
-  - pip install -r requirements/tests.txt
+  - pip install -r tests/requirements.txt
   - pip install https://github.com/django/django/archive/${DJANGO}.zip#egg=django
 script:
   - inv test
