More fixes to the test setup.

--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,19 @@ envlist =
     coverage-py27-dj16,
     flake8-py27,
     flake8-py33,
-    py{26,27,32,33,34,py}-dj{14,15,16,17,18}
+    py{26,py}-dj{14,15,16},
+    py27-dj{14,15,16,17,18},
+    py{32,33,34,py}-dj{15,16,17,18}
 
 [testenv]
+basepython =
+    py26: python2.6
+    py27: python2.7
+    py32: python3.2
+    py33: python3.3
+    py34: python3.4
+    pypy: pypy
+usedevelop = true
 deps =
     django-discover-runner
     mock
