Simplify coverage setup.

--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,5 @@ commands = flake8 configurations --ignore=E501,E127,E128,E124
 
 [testenv:coverage-py27-dj16]
 commands = coverage erase
-           coverage run --source=. manage.py test -v2 {posargs:tests}
-           coverage report -m configurations/*py
-           coverage html configurations/*py
+           coverage run manage.py test -v2 {posargs:tests}
+           coverage report
