Fix 1.8 test runner.

--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ deps =
     coverage: coverage
 
 commands =
-    python manage.py test -v2 {posargs:tests} --failfast
+    python manage.py test -v2 {posargs:tests}
 
 [testenv:flake8-py27]
 commands = flake8 configurations --ignore=E501,E127,E128,E124
