--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,11 @@
+[pytest]
+django_find_project = false
+addopts = --cov configurations
+DJANGO_SETTINGS_MODULE = tests.settings.main
+DJANGO_CONFIGURATION = Test
+
 [wheel]
 universal = 1
+
+[flake8]
+ignore = E124,E501,E127,E128
