pytest-django works with Django 1.8 now

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ deps =
     dj-search-url
     django-cache-url>=0.6.0
     six
-    https://github.com/pytest-dev/pytest-django/archive/master.zip#egg=pytest-django
+    pytest-django
     pytest-cov
     dj14: https://github.com/django/django/archive/stable/1.4.x.zip#egg=django
     dj15: https://github.com/django/django/archive/stable/1.5.x.zip#egg=django
