Revert "Use py.test."
This reverts commit 7799241900fe8e3cb0832b99e17fa9cd9b4144b4.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include README.rst
 include AUTHORS
 include .travis.yml
+include manage.py
 include tasks.py
 recursive-include tests *
 recursive-include docs *
