--- a/tox.ini
+++ b/tox.ini
@@ -19,27 +19,31 @@ basepython =
     pypy: pypy
 usedevelop = true
 deps =
+    django-discover-runner
     mock
     dj-database-url
     dj-email-url
     dj-search-url
     django-cache-url>=0.6.0
     six
-    pytest-django
-    pytest-cov
     dj14: https://github.com/django/django/archive/stable/1.4.x.zip#egg=django
     dj15: https://github.com/django/django/archive/stable/1.5.x.zip#egg=django
     dj16: https://github.com/django/django/archive/stable/1.6.x.zip#egg=django
     dj17: https://github.com/django/django/archive/stable/1.7.x.zip#egg=django
     dj18: https://github.com/django/django/archive/master.zip#egg=django
+    flake8: flake8
+    coverage: coverage
 
 commands =
-    py.test {posargs:}
+    python manage.py test -v2 {posargs:tests}
 
 [testenv:flake8-py27]
-commands = flake8 configurations
-deps = flake8
+commands = flake8 configurations --ignore=E501,E127,E128,E124
 
 [testenv:flake8-py33]
-commands = flake8 configurations
-deps = flake8
+commands = flake8 configurations --ignore=E501,E127,E128,E124
+
+[testenv:coverage-py27-dj16]
+commands = coverage erase
+           coverage run manage.py test -v2 {posargs:tests}
+           coverage report
