Minor fixes for 1.8.

--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,8 @@ deps =
     coverage: coverage
 
 commands =
-    python manage.py test -v2 {posargs:tests}
+    coverage run manage.py test -v2 {posargs:tests}
+    coverage report
 
 [testenv:flake8-py27]
 commands = flake8 configurations --ignore=E501,E127,E128,E124
