Fix tox config.

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ basepython =
     pypy: pypy
 usedevelop = true
 deps =
+    coverage
     django-discover-runner
     mock
     dj-database-url
@@ -32,15 +33,19 @@ deps =
     dj17: https://github.com/django/django/archive/stable/1.7.x.zip#egg=django
     dj18: https://github.com/django/django/archive/stable/1.8.x.zip#egg=django
     dj19: https://github.com/django/django/archive/master.zip#egg=django
-    flake8: flake8
-    coverage: coverage
 
 commands =
     coverage run manage.py test -v2 {posargs:tests}
     coverage report
 
 [testenv:flake8-py27]
-commands = flake8 configurations --ignore=E501,E127,E128,E124
+commands = flake8 configurations
+deps = flake8
 
 [testenv:flake8-py33]
-commands = flake8 configurations --ignore=E501,E127,E128,E124
+commands = flake8 configurations
+deps = flake8
+
+[flake8]
+exclude=.tox
+ignore=E501,E127,E128,E124
