--- a/.travis.yml
+++ b/.travis.yml
@@ -13,22 +13,27 @@ env:
   - TOXENV=py27-dj16
   - TOXENV=py27-dj17
   - TOXENV=py27-dj18
+  - TOXENV=py27-dj19
   - TOXENV=py32-dj15
   - TOXENV=py32-dj16
   - TOXENV=py32-dj17
   - TOXENV=py32-dj18
+  - TOXENV=py32-dj19
   - TOXENV=py33-dj15
   - TOXENV=py33-dj16
   - TOXENV=py33-dj17
   - TOXENV=py33-dj18
+  - TOXENV=py33-dj19
   - TOXENV=py34-dj15
   - TOXENV=py34-dj16
   - TOXENV=py34-dj17
   - TOXENV=py34-dj18
+  - TOXENV=py34-dj19
   - TOXENV=pypy-dj15
   - TOXENV=pypy-dj16
   - TOXENV=pypy-dj17
   - TOXENV=pypy-dj18
+  - TOXENV=pypy-dj19
 install:
   - pip install tox
 script:
