Get rid of manage.py for running tests now that we have django-cadmin.
Closes #92.

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,9 @@ basepython =
     py34: python3.4
     pypy: pypy
 usedevelop = true
+setenv =
+    DJANGO_SETTINGS_MODULE = tests.settings.main
+    DJANGO_CONFIGURATION = Test
 deps =
     coverage
     django-discover-runner
@@ -35,7 +38,7 @@ deps =
     dj19: https://github.com/django/django/archive/master.zip#egg=django
 
 commands =
-    coverage run manage.py test -v2 {posargs:tests}
+    coverage run {envbindir}/django-cadmin test -v2 {posargs:tests}
     coverage report
 
 [testenv:flake8-py27]
