--- a/.travis.yml
+++ b/.travis.yml
@@ -1,43 +1,58 @@
 language: python
+sudo: false
+cache:
+  # Apparently if you override the install command that silently disables the
+  # cache: pip support. This is less than ideal and I've opened up
+  # travis-ci/travis-ci#3239 to hopefully get that addressed. For now I'll
+  # manually add the pip cache directory to the build cache.
+  directories:
+    - ~/.cache/pip
 env:
-  - TOXENV=flake8-py27
-  - TOXENV=flake8-py33
-  - TOXENV=py26-dj14
-  - TOXENV=py26-dj15
-  - TOXENV=py26-dj16
-  - TOXENV=pypy-dj14
-  - TOXENV=pypy-dj15
-  - TOXENV=pypy-dj16
-  - TOXENV=py27-dj14
-  - TOXENV=py27-dj15
-  - TOXENV=py27-dj16
-  - TOXENV=py27-dj17
-  - TOXENV=py27-dj18
-  - TOXENV=py27-dj19
-  - TOXENV=py32-dj15
-  - TOXENV=py32-dj16
-  - TOXENV=py32-dj17
-  - TOXENV=py32-dj18
-  - TOXENV=py32-dj19
-  - TOXENV=py33-dj15
-  - TOXENV=py33-dj16
-  - TOXENV=py33-dj17
-  - TOXENV=py33-dj18
-  - TOXENV=py33-dj19
-  - TOXENV=py34-dj15
-  - TOXENV=py34-dj16
-  - TOXENV=py34-dj17
-  - TOXENV=py34-dj18
-  - TOXENV=py34-dj19
-  - TOXENV=pypy-dj15
-  - TOXENV=pypy-dj16
-  - TOXENV=pypy-dj17
-  - TOXENV=pypy-dj18
-  - TOXENV=pypy-dj19
-install:
-  - pip install tox
-script:
-  - tox
+  global:
+    # These two environment variables could be set by Travis itself, or Travis
+    # could configure itself in /etc/, ~/, or inside of the virtual
+    # environments. In any case if these two values get configured then end
+    # users only need to enable the pip cache and manually run pip wheel before
+    # running pip install.
+    - PIP_WHEEL_DIR=$HOME/.cache/pip/wheels
+    - PIP_FIND_LINKS=file://$HOME/.cache/pip/wheels
+  matrix:
+    - TOXENV=flake8-py27
+    - TOXENV=flake8-py33
+    - TOXENV=py26-dj14
+    - TOXENV=py26-dj15
+    - TOXENV=py26-dj16
+    - TOXENV=pypy-dj14
+    - TOXENV=pypy-dj15
+    - TOXENV=pypy-dj16
+    - TOXENV=py27-dj14
+    - TOXENV=py27-dj15
+    - TOXENV=py27-dj16
+    - TOXENV=py27-dj17
+    - TOXENV=py27-dj18
+    - TOXENV=py27-dj19
+    - TOXENV=py32-dj15
+    - TOXENV=py32-dj16
+    - TOXENV=py32-dj17
+    - TOXENV=py32-dj18
+    - TOXENV=py32-dj19
+    - TOXENV=py33-dj15
+    - TOXENV=py33-dj16
+    - TOXENV=py33-dj17
+    - TOXENV=py33-dj18
+    - TOXENV=py33-dj19
+    - TOXENV=py34-dj15
+    - TOXENV=py34-dj16
+    - TOXENV=py34-dj17
+    - TOXENV=py34-dj18
+    - TOXENV=py34-dj19
+    - TOXENV=pypy-dj15
+    - TOXENV=pypy-dj16
+    - TOXENV=pypy-dj17
+    - TOXENV=pypy-dj18
+    - TOXENV=pypy-dj19
+install: pip install tox
+script: tox
 branches:
   except:
     templates/1.5.x
