--- a/tox.ini
+++ b/tox.ini
@@ -22,14 +22,7 @@ setenv =
     DJANGO_SETTINGS_MODULE = tests.settings.main
     DJANGO_CONFIGURATION = Test
 deps =
-    coverage
-    django-discover-runner
-    mock
-    dj-database-url
-    dj-email-url
-    dj-search-url
-    django-cache-url>=0.6.0
-    six
+    -rtests/requirements.txt
     dj14: https://github.com/django/django/archive/stable/1.4.x.zip#egg=django
     dj15: https://github.com/django/django/archive/stable/1.5.x.zip#egg=django
     dj16: https://github.com/django/django/archive/stable/1.6.x.zip#egg=django
