Travis/tox: use dj19 tarball, add master; remove unsupported
 - Add `allow_failures` section for Django master on Travis.
 - Django 1.9 is only supported on Python 2.7 and 3.4+.

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,8 @@ deps =
     dj16: https://github.com/django/django/archive/stable/1.6.x.tar.gz#egg=django
     dj17: https://github.com/django/django/archive/stable/1.7.x.tar.gz#egg=django
     dj18: https://github.com/django/django/archive/stable/1.8.x.tar.gz#egg=django
-    dj19: https://github.com/django/django/archive/master.tar.gz#egg=django
+    dj19: https://github.com/django/django/archive/stable/1.9.x.tar.gz#egg=django
+    djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
 
 commands =
     coverage run {envbindir}/django-cadmin test -v2 {posargs:tests}
