--- a/.travis.yml
+++ b/.travis.yml
@@ -26,26 +26,38 @@ env:
     - TOXENV=py27-dj17
     - TOXENV=py27-dj18
     - TOXENV=py27-dj19
+    - TOXENV=py27-djmaster
     - TOXENV=py32-dj15
     - TOXENV=py32-dj16
     - TOXENV=py32-dj17
     - TOXENV=py32-dj18
-    - TOXENV=py32-dj19
     - TOXENV=py33-dj15
     - TOXENV=py33-dj16
     - TOXENV=py33-dj17
     - TOXENV=py33-dj18
-    - TOXENV=py33-dj19
     - TOXENV=py34-dj15
     - TOXENV=py34-dj16
     - TOXENV=py34-dj17
     - TOXENV=py34-dj18
     - TOXENV=py34-dj19
+    - TOXENV=py34-djmaster
+    - TOXENV=py35-dj15
+    - TOXENV=py35-dj16
+    - TOXENV=py35-dj17
+    - TOXENV=py35-dj18
+    - TOXENV=py35-dj19
+    - TOXENV=py35-djmaster
     - TOXENV=pypy-dj15
     - TOXENV=pypy-dj16
     - TOXENV=pypy-dj17
     - TOXENV=pypy-dj18
     - TOXENV=pypy-dj19
+    - TOXENV=pypy-djmaster
+  allow_failures:
+    - TOXENV=py27-djmaster
+    - TOXENV=py34-djmaster
+    - TOXENV=py35-djmaster
+    - TOXENV=pypy-djmaster
 install:
   - pip wheel -r tests/requirements.txt
   - pip install tox
