Travis/tox: use dj19 tarball, add master; remove unsupported
 - Add `allow_failures` section for Django master on Travis.
 - Django 1.9 is only supported on Python 2.7 and 3.4+.
 - Only test main Python 2 and 3 with Django master.

--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,9 @@ envlist =
     flake8-py27,
     flake8-py35,
     py{26,py}-dj{14,15,16},
-    py27-dj{14,15,16,17,18,19},
+    py27-dj{14,15,16,17,18,19,master},
     py{32,33,34,py}-dj{15,16,17,18}
-    py{34,35,py]-dj{19,master}}
+    py{34,35,py}-dj{19,master}
 
 [testenv]
 basepython =
@@ -30,7 +30,8 @@ deps =
     dj16: https://github.com/django/django/archive/stable/1.6.x.tar.gz#egg=django
     dj17: https://github.com/django/django/archive/stable/1.7.x.tar.gz#egg=django
     dj18: https://github.com/django/django/archive/stable/1.8.x.tar.gz#egg=django
-    dj19: https://github.com/django/django/archive/master.tar.gz#egg=django
+    dj19: https://github.com/django/django/archive/stable/1.9.x.tar.gz#egg=django
+    djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
 
 commands =
     coverage run {envbindir}/django-cadmin test -v2 {posargs:tests}
