tox: do not use coverage with Python 3.2
Fixes https://github.com/jezdez/django-configurations/issues/129.

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,16 @@ commands =
     coverage run {envbindir}/django-cadmin test -v2 {posargs:tests}
     coverage report
 
+# Coverage supports only Python 3.3+ for Python 3.
+[testenv:py32-dj15]
+commands = {envbindir}/django-cadmin test -v2 {posargs:tests}
+[testenv:py32-dj16]
+commands = {envbindir}/django-cadmin test -v2 {posargs:tests}
+[testenv:py32-dj17]
+commands = {envbindir}/django-cadmin test -v2 {posargs:tests}
+[testenv:py32-dj18]
+commands = {envbindir}/django-cadmin test -v2 {posargs:tests}
+
 [testenv:flake8-py27]
 commands = flake8 configurations
 deps = flake8
