Travis: use Python 3.5 for Python 3 flake8 test

--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,11 @@ usedevelop = True
 minversion = 1.8
 envlist =
     flake8-py27,
-    flake8-py33,
+    flake8-py35,
     py{26,py}-dj{14,15,16},
     py27-dj{14,15,16,17,18,19},
-    py{32,33,34,py}-dj{15,16,17,18,19}
+    py{32,33,34,py}-dj{15,16,17,18}
+    py{34,35,py]-dj{19,master}}
 
 [testenv]
 basepython =
@@ -16,6 +17,7 @@ basepython =
     py32: python3.2
     py33: python3.3
     py34: python3.4
+    py35: python3.5
     pypy: pypy
 usedevelop = true
 setenv =
@@ -48,7 +50,7 @@ commands = {envbindir}/django-cadmin test -v2 {posargs:tests}
 commands = flake8 configurations
 deps = flake8
 
-[testenv:flake8-py33]
+[testenv:flake8-py35]
 commands = flake8 configurations
 deps = flake8
 
