--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,9 @@ envlist =
     flake8-py27,
     flake8-py33,
     py{26,py}-dj{14,15,16},
-    py27-dj{14,15,16,17,18,19},
-    py{32,33,34,py}-dj{15,16,17,18,19}
+    py27-dj{14,15,16,17,18,19,master},
+    py{32,33,34,py}-dj{15,16,17,18}
+    py{34,py}-dj{19,master}
 
 [testenv]
 basepython =
