--- a/.travis.yml
+++ b/.travis.yml
@@ -1,56 +1,60 @@
 language: python
 sudo: false
 cache:
-  # Apparently if you override the install command that silently disables the
-  # cache: pip support. This is less than ideal and I've opened up
-  # travis-ci/travis-ci#3239 to hopefully get that addressed. For now I'll
-  # manually add the pip cache directory to the build cache.
   directories:
-    - ~/.cache/pip
+  - "~/.cache/pip"
 env:
   global:
-    - PIP_WHEEL_DIR=$HOME/.cache/pip/wheels
-    - PIP_FIND_LINKS=file://$HOME/.cache/pip/wheels
+  - PIP_WHEEL_DIR=$HOME/.cache/pip/wheels
+  - PIP_FIND_LINKS=file://$HOME/.cache/pip/wheels
   matrix:
-    - TOXENV=flake8-py27
-    - TOXENV=flake8-py33
-    - TOXENV=py26-dj14
-    - TOXENV=py26-dj15
-    - TOXENV=py26-dj16
-    - TOXENV=pypy-dj14
-    - TOXENV=pypy-dj15
-    - TOXENV=pypy-dj16
-    - TOXENV=py27-dj14
-    - TOXENV=py27-dj15
-    - TOXENV=py27-dj16
-    - TOXENV=py27-dj17
-    - TOXENV=py27-dj18
-    - TOXENV=py27-dj19
-    - TOXENV=py32-dj15
-    - TOXENV=py32-dj16
-    - TOXENV=py32-dj17
-    - TOXENV=py32-dj18
-    - TOXENV=py32-dj19
-    - TOXENV=py33-dj15
-    - TOXENV=py33-dj16
-    - TOXENV=py33-dj17
-    - TOXENV=py33-dj18
-    - TOXENV=py33-dj19
-    - TOXENV=py34-dj15
-    - TOXENV=py34-dj16
-    - TOXENV=py34-dj17
-    - TOXENV=py34-dj18
-    - TOXENV=py34-dj19
-    - TOXENV=pypy-dj15
-    - TOXENV=pypy-dj16
-    - TOXENV=pypy-dj17
-    - TOXENV=pypy-dj18
-    - TOXENV=pypy-dj19
+  - TOXENV=flake8-py27
+  - TOXENV=flake8-py33
+  - TOXENV=py26-dj14
+  - TOXENV=py26-dj15
+  - TOXENV=py26-dj16
+  - TOXENV=pypy-dj14
+  - TOXENV=pypy-dj15
+  - TOXENV=pypy-dj16
+  - TOXENV=py27-dj14
+  - TOXENV=py27-dj15
+  - TOXENV=py27-dj16
+  - TOXENV=py27-dj17
+  - TOXENV=py27-dj18
+  - TOXENV=py27-dj19
+  - TOXENV=py32-dj15
+  - TOXENV=py32-dj16
+  - TOXENV=py32-dj17
+  - TOXENV=py32-dj18
+  - TOXENV=py32-dj19
+  - TOXENV=py33-dj15
+  - TOXENV=py33-dj16
+  - TOXENV=py33-dj17
+  - TOXENV=py33-dj18
+  - TOXENV=py33-dj19
+  - TOXENV=py34-dj15
+  - TOXENV=py34-dj16
+  - TOXENV=py34-dj17
+  - TOXENV=py34-dj18
+  - TOXENV=py34-dj19
+  - TOXENV=pypy-dj15
+  - TOXENV=pypy-dj16
+  - TOXENV=pypy-dj17
+  - TOXENV=pypy-dj18
+  - TOXENV=pypy-dj19
 install:
-  - pip wheel -r tests/requirements.txt
-  - pip install tox
+- pip wheel -r tests/requirements.txt
+- pip install tox
 script: tox
 branches:
-  except:
-    templates/1.5.x
-    templates/1.6.x
+  except: templates/1.5.x templates/1.6.x
+deploy:
+  provider: pypi
+  user: jazzband
+  distributions: "sdist bdist_wheel"
+  password:
+    secure: Oq6xiBtbip8+0U8t1WvDcUt1tX6imQeaHXvB+bqh2eU+RYntz8UWl9UOxfQEV4ghssX1zEKeOZzpYohj+oEi5b8oJo3H8pcbJIdK6rTNJEjQpDGSSjI3I1pHlflAJCDhPlGIgZYVPlY0dWK50l86hL+Y7QzLXjgsVCqlTCCtDfA=
+  on:
+    tags: true
+    repo: jazzband/django-configurations
+    condition: "$TOXENV = py27-dj19"
