Added Python version print to make sure we're running the right version in the tox env. Fix #137.

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ deps =
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
 
 commands =
+    python --version
     coverage run {envbindir}/django-cadmin test -v2 {posargs:tests}
     coverage report
 
