--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ minversion = 1.8
 envlist =
     flake8-py27,
     flake8-py35,
+    readme-py27,
     py{26,py}-dj{14,15,16},
     py27-dj{14,15,16,17,18,19,master},
     py{32,33,34,py}-dj{15,16,17,18}
@@ -47,6 +48,10 @@ commands = {envbindir}/django-cadmin test -v2 {posargs:tests}
 commands = {envbindir}/django-cadmin test -v2 {posargs:tests}
 [testenv:py32-dj18]
 commands = {envbindir}/django-cadmin test -v2 {posargs:tests}
+
+[testenv:readme-py27]
+commands = python setup.py check -r -s
+deps = readme_renderer
 
 [testenv:flake8-py27]
 commands = flake8 configurations
