--- a/.travis.yml
+++ b/.travis.yml
@@ -12,38 +12,16 @@ env:
     - TOXENV=flake8-py27
     - TOXENV=flake8-py35
     - TOXENV=readme-py27
-    - TOXENV=py26-dj14
-    - TOXENV=py26-dj15
-    - TOXENV=py26-dj16
-    - TOXENV=pypy-dj14
-    - TOXENV=pypy-dj15
-    - TOXENV=pypy-dj16
-    - TOXENV=py27-dj14
-    - TOXENV=py27-dj15
-    - TOXENV=py27-dj16
-    - TOXENV=py27-dj17
     - TOXENV=py27-dj18
     - TOXENV=py27-dj19
     - TOXENV=py27-djmaster
-    - TOXENV=py32-dj15
-    - TOXENV=py32-dj16
-    - TOXENV=py32-dj17
-    - TOXENV=py32-dj18
-    - TOXENV=py33-dj15
-    - TOXENV=py33-dj16
-    - TOXENV=py33-dj17
     - TOXENV=py33-dj18
-    - TOXENV=py34-dj15
-    - TOXENV=py34-dj16
-    - TOXENV=py34-dj17
     - TOXENV=py34-dj18
     - TOXENV=py34-dj19
+    - TOXENV=py34-djmaster
     - TOXENV=py35-dj18
     - TOXENV=py35-dj19
     - TOXENV=py35-djmaster
-    - TOXENV=pypy-dj15
-    - TOXENV=pypy-dj16
-    - TOXENV=pypy-dj17
     - TOXENV=pypy-dj18
     - TOXENV=pypy-dj19
 matrix:
