--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-django-configurations>=0.4
-Django>=1.6,<1.7
-dj-database-url==0.2.2
+django-configurations==1.0
+Django>=1.8,<1.9
+dj-database-url==0.3
