--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 skipsdist = True
 usedevelop = True
 minversion = 1.8
+whitelist_externals=build-sphinx
 envlist =
     flake8-py27,
     flake8-py35,
