--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,23 @@
 language: python
 python: 3.5
 sudo: false
-cache:
-  directories:
-  - "~/.cache/pip"
+cache: pip
 env:
-  global:
-    - PIP_WHEEL_DIR=$HOME/.cache/pip/wheels
-    - PIP_FIND_LINKS=file://$HOME/.cache/pip/wheels
-  matrix:
-    - TOXENV=flake8-py27
-    - TOXENV=flake8-py35
-    - TOXENV=readme-py27
-    - TOXENV=py27-dj18
-    - TOXENV=py27-dj19
-    - TOXENV=py27-djmaster
-    - TOXENV=py33-dj18
-    - TOXENV=py34-dj18
-    - TOXENV=py34-dj19
-    - TOXENV=py34-djmaster
-    - TOXENV=py35-dj18
-    - TOXENV=py35-dj19
-    - TOXENV=py35-djmaster
-    - TOXENV=pypy-dj18
-    - TOXENV=pypy-dj19
+  - TOXENV=flake8-py27
+  - TOXENV=flake8-py35
+  - TOXENV=readme-py27
+  - TOXENV=py27-dj18
+  - TOXENV=py27-dj19
+  - TOXENV=py27-djmaster
+  - TOXENV=py33-dj18
+  - TOXENV=py34-dj18
+  - TOXENV=py34-dj19
+  - TOXENV=py34-djmaster
+  - TOXENV=py35-dj18
+  - TOXENV=py35-dj19
+  - TOXENV=py35-djmaster
+  - TOXENV=pypy-dj18
+  - TOXENV=pypy-dj19
 matrix:
   allow_failures:
     - env: TOXENV=py27-djmaster
@@ -31,7 +25,6 @@ matrix:
     - env: TOXENV=py35-djmaster
     - env: TOXENV=pypy-djmaster
 install:
-  - pip wheel -r tests/requirements.txt
   - pip install tox codecov
 script: tox -v
 after_success:
