qa: run flake8 against tests

--- a/tox.ini
+++ b/tox.ini
@@ -33,11 +33,11 @@ commands = python setup.py check -r -s
 deps = readme_renderer
 
 [testenv:flake8-py27]
-commands = flake8 configurations
+commands = flake8 configurations tests
 deps = flake8
 
 [testenv:flake8-py36]
-commands = flake8 configurations
+commands = flake8 configurations tests
 deps = flake8
 
 [flake8]
