--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
 script: tox -v
 after_success:
   - pip install codecov
-  - codecov
+  - codecov --required -X gcov --flags ${TOXENV//-/ }
   - coverage report -m
 branches:
   except: templates/1.5.x templates/1.6.x
