--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,69 @@
 language: python
-python: 3.5
 sudo: false
 cache: pip
-env:
-  - TOXENV=flake8-py27
-  - TOXENV=flake8-py35
-  - TOXENV=readme-py27
-  - TOXENV=py27-dj18
-  - TOXENV=py27-dj19
-  - TOXENV=py27-djmaster
-  - TOXENV=py34-dj18
-  - TOXENV=py34-dj19
-  - TOXENV=py34-djmaster
-  - TOXENV=py35-dj18
-  - TOXENV=py35-dj19
-  - TOXENV=py35-djmaster
 matrix:
-  allow_failures:
-    - env: TOXENV=py27-djmaster
-    - env: TOXENV=py34-djmaster
-    - env: TOXENV=py35-djmaster
-    - env: TOXENV=pypy-djmaster
   include:
+    - env: TOXENV=flake8-py27
+      python: 2.7
+    - env: TOXENV=flake8-py36
+      python: 3.6
+    - env: TOXENV=readme-py27
+      python: 2.7
+    - env: TOXENV=py27-dj18
+      python: 2.7
+    - env: TOXENV=py27-dj110
+      python: 2.7
+    - env: TOXENV=py27-dj111
+      python: 2.7
+    - env: TOXENV=py34-dj18
+      python: 3.4
+    - env: TOXENV=py34-dj110
+      python: 3.4
+    - env: TOXENV=py34-dj111
+      python: 3.4
+    - env: TOXENV=py35-dj18
+      python: 3.5
+    - env: TOXENV=py35-dj110
+      python: 3.5
+    - env: TOXENV=py35-dj111
+      python: 3.5
+    - env: TOXENV=py36-dj18
+      python: 3.6
+    - env: TOXENV=py36-dj110
+      python: 3.6
+    - env: TOXENV=py36-dj111
+      python: 3.6
     - env: TOXENV=pypy-dj18
       python: pypy
-    - env: TOXENV=pypy-dj19
+    - env: TOXENV=pypy-dj110
       python: pypy
+    - env: TOXENV=pypy-dj111
+      python: pypy
+    - env: TOXENV=py34-dj20
+      python: 3.4
+    - env: TOXENV=py34-djmaster
+      python: 3.4
+    - env: TOXENV=py35-dj20
+      python: 3.5
+    - env: TOXENV=py35-djmaster
+      python: 3.5
+    - env: TOXENV=py36-dj20
+      python: 3.6
+    - env: TOXENV=py36-djmaster
+      python: 3.6
+  allow_failures:
+    - env: TOXENV=py34-dj20
+      python: 3.4
+    - env: TOXENV=py35-dj20
+      python: 3.5
+    - env: TOXENV=py36-dj20
+      python: 3.6
+    - env: TOXENV=py34-djmaster
+      python: 3.4
+    - env: TOXENV=py35-djmaster
+      python: 3.5
+    - env: TOXENV=py36-djmaster
+      python: 3.6
 install:
   - pip install tox
 script: tox -v
@@ -44,4 +82,4 @@ deploy:
   on:
     tags: true
     repo: jazzband/django-configurations
-    condition: "$TOXENV = py27-dj19"
+    condition: "$TOXENV = py36-dj111"
