_setup: do not call django.setup() if settings are configured already
Without this, using `configurations.setup()` after Django has been setup
already re-triggers the logging configuration, which then causes e.g.
pytest's caplog to not work anymore.

--- a/tox.ini
+++ b/tox.ini
@@ -25,11 +25,12 @@ deps =
     dj20: django>=2.0a1,<2.1
     dj21: django>=2.1a1,<2.2
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
+    py27,pypy: mock
 
 commands =
     python --version
     coverage run {envbindir}/django-cadmin test -v2 {posargs:tests}
-    coverage combine
+    coverage combine . tests/docs
     coverage report -m --skip-covered
 
 [testenv:readme-py27]
