coverage: move config to setup.cfg, add report-include

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,9 @@
 [wheel]
 universal = 1
+
+[coverage:run]
+source = .
+include = configurations/*,tests/*
+branch = 1
+[coverage:report]
+include = configurations/*,tests/*
