--- a/.travis.yml
+++ b/.travis.yml
@@ -62,9 +62,13 @@ install:
   - pip install tox
 script: tox -v
 after_success:
-  - pip install codecov
-  - codecov --required -X gcov --flags ${TOXENV//-/ }
-  - coverage report -m
+  - |
+    if [ "$TOXENV" = py* ]; then
+      pip install codecov
+      coverage xml
+      coverage report -m
+      codecov --required -X gcov fix pycov -f coverage.xml --flags ${TOXENV//-/ }
+    fi
 branches:
   except: templates/1.5.x templates/1.6.x
 deploy:
