Travis/tox: test with Django 2.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ matrix:
     python: 3.5
   - env: TOXENV=py36-dj20
     python: 3.6
+  - env: TOXENV=py36-dj21
+    python: 3.6
   - env: TOXENV=py36-djmaster
     python: 3.6
   allow_failures:
