--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist =
     flake8-py36,
     readme-py27,
     py{27,34,35,36,py}-dj{18,110,111}
-    py{34,35,36}-dj{20,master}
+    py{34,35,36}-dj{20,21,master}
 
 [testenv]
 usedevelop = true
@@ -21,6 +21,7 @@ deps =
     dj110: django>=1.10,<1.11
     dj111: django>=1.11,<2.0
     dj20: django>=2.0a1,<2.1
+    dj21: django>=2.1a1,<2.2
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
 
 commands =
