coverage: track subprocesses

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ universal = 1
 
 [coverage:run]
 source = .
-include = configurations/*,tests/*
 branch = 1
+parallel = 1
 [coverage:report]
 include = configurations/*,tests/*
