--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ usedevelop = true
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings.main
     DJANGO_CONFIGURATION = Test
+    COVERAGE_PROCESS_START = {toxinidir}/setup.cfg
 deps =
     -rtests/requirements.txt
     dj18: django>=1.8,<1.9
@@ -28,7 +29,8 @@ deps =
 commands =
     python --version
     coverage run {envbindir}/django-cadmin test -v2 {posargs:tests}
-    coverage report
+    coverage combine
+    coverage report -m --skip-covered
 
 [testenv:readme-py27]
 commands = python setup.py check -r -s
