--- a/.travis.yml
+++ b/.travis.yml
@@ -9,34 +9,14 @@ matrix:
     python: 3.6
   - env: TOXENV=readme-py27
     python: 2.7
-  - env: TOXENV=py27-dj18
-    python: 2.7
-  - env: TOXENV=py27-dj110
-    python: 2.7
   - env: TOXENV=py27-dj111
     python: 2.7
-  - env: TOXENV=py34-dj18
-    python: 3.4
-  - env: TOXENV=py34-dj110
-    python: 3.4
   - env: TOXENV=py34-dj111
     python: 3.4
-  - env: TOXENV=py35-dj18
-    python: 3.5
-  - env: TOXENV=py35-dj110
-    python: 3.5
   - env: TOXENV=py35-dj111
     python: 3.5
-  - env: TOXENV=py36-dj18
-    python: 3.6
-  - env: TOXENV=py36-dj110
-    python: 3.6
   - env: TOXENV=py36-dj111
     python: 3.6
-  - env: TOXENV=pypy-dj18
-    python: pypy
-  - env: TOXENV=pypy-dj110
-    python: pypy
   - env: TOXENV=pypy-dj111
     python: pypy
   - env: TOXENV=py34-dj20
@@ -51,11 +31,27 @@ matrix:
     python: 3.6
   - env: TOXENV=py36-djmaster
     python: 3.6
+  - env: TOXENV=py37-dj20
+    python: 3.7
+    dist: xenial
+    sudo: true
+  - env: TOXENV=py37-dj21
+    python: 3.7
+    dist: xenial
+    sudo: true
+  - env: TOXENV=py37-djmaster
+    python: 3.7
+    dist: xenial
+    sudo: true
   allow_failures:
   - env: TOXENV=py35-djmaster
     python: 3.5
   - env: TOXENV=py36-djmaster
     python: 3.6
+  - env: TOXENV=py37-djmaster
+    python: 3.7
+    dist: xenial
+    sudo: true
 install:
 - pip install tox
 script: tox -v
