--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ deps =
     dj21: django>=2.1a1,<2.2
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
     py27,pypy: mock
+    coverage_enable_subprocess
 
 commands =
     python --version
