--- a/.travis.yml
+++ b/.travis.yml
@@ -9,46 +9,46 @@ matrix:
     python: 3.6
   - env: TOXENV=readme-py27
     python: 2.7
-  - env: TOXENV=py27-dj111
+  - env: TOXENV=py27-dj111-coverage
     python: 2.7
-  - env: TOXENV=py34-dj111
+  - env: TOXENV=py34-dj111-coverage
     python: 3.4
-  - env: TOXENV=py35-dj111
+  - env: TOXENV=py35-dj111-coverage
     python: 3.5
-  - env: TOXENV=py36-dj111
+  - env: TOXENV=py36-dj111-coverage
     python: 3.6
-  - env: TOXENV=pypy-dj111
+  - env: TOXENV=pypy-dj111-coverage
     python: pypy
-  - env: TOXENV=py34-dj20
+  - env: TOXENV=py34-dj20-coverage
     python: 3.4
-  - env: TOXENV=py35-dj20
+  - env: TOXENV=py35-dj20-coverage
     python: 3.5
-  - env: TOXENV=py35-djmaster
+  - env: TOXENV=py35-djmaster-coverage
     python: 3.5
-  - env: TOXENV=py36-dj20
+  - env: TOXENV=py36-dj20-coverage
     python: 3.6
-  - env: TOXENV=py36-dj21
+  - env: TOXENV=py36-dj21-coverage
     python: 3.6
-  - env: TOXENV=py36-djmaster
+  - env: TOXENV=py36-djmaster-coverage
     python: 3.6
-  - env: TOXENV=py37-dj20
+  - env: TOXENV=py37-dj20-coverage
     python: 3.7
     dist: xenial
     sudo: true
-  - env: TOXENV=py37-dj21
+  - env: TOXENV=py37-dj21-coverage
     python: 3.7
     dist: xenial
     sudo: true
-  - env: TOXENV=py37-djmaster
+  - env: TOXENV=py37-djmaster-coverage
     python: 3.7
     dist: xenial
     sudo: true
   allow_failures:
-  - env: TOXENV=py35-djmaster
+  - env: TOXENV=py35-djmaster-coverage
     python: 3.5
-  - env: TOXENV=py36-djmaster
+  - env: TOXENV=py36-djmaster-coverage
     python: 3.6
-  - env: TOXENV=py37-djmaster
+  - env: TOXENV=py37-djmaster-coverage
     python: 3.7
     dist: xenial
     sudo: true
@@ -57,7 +57,7 @@ install:
 script: tox -v
 after_success:
 - |
-  if [[ "$TOXENV" = py* ]]; then
+  if [[ "${TOXENV#-coverage}" != "$TOXENV" ]]; then
     pip install codecov
     coverage xml
     codecov --required -X gcov fix pycov -f coverage.xml --flags ${TOXENV//-/ }
