--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-skipsdist = True
-usedevelop = True
+skipsdist = true
+usedevelop = true
 minversion = 1.8
-whitelist_externals=sphinx-build
+whitelist_externals = sphinx-build
 envlist =
     flake8-py27,
     flake8-py36,
@@ -19,7 +19,6 @@ setenv =
     coverage: COVERAGE_PROCESS_START = {toxinidir}/setup.cfg
     coverage: _TEST_RUN_PREFIX=coverage run
 deps =
-    -rtests/requirements.txt
     dj18: django>=1.8,<1.9
     dj110: django>=1.10,<1.11
     dj111: django>=1.11,<2.0
@@ -29,7 +28,7 @@ deps =
     py27,pypy: mock
     coverage: coverage
     coverage: coverage_enable_subprocess
-
+extras = testing
 commands =
     python --version
     {env:_TEST_RUN_PREFIX:} {envbindir}/django-cadmin test -v2 {posargs:tests}
@@ -49,5 +48,5 @@ commands = flake8 configurations tests
 deps = flake8
 
 [flake8]
-exclude=.tox
-ignore=E501,E127,E128,E124
+exclude = .tox
+ignore = E501,E127,E128,E124
