Enable check suite in favor of travis-ci QA runs

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,7 @@ branch = 1
 parallel = 1
 [coverage:report]
 include = configurations/*,tests/*
+
+[flake8]
+exclude = .tox,docs/*
+ignore = E501,E127,E128,E124,W503
