Add checkqa test environment to tox
Add support to run QA tests locally

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ usedevelop = true
 minversion = 1.8
 whitelist_externals = sphinx-build
 envlist =
+    ckeckqa,
     readme-py27,
     py{27,34,35,36,py}-dj{18,110,111}
     py{34,35,36,37}-dj20
@@ -36,3 +37,11 @@ commands =
 [testenv:readme-py27]
 commands = python setup.py check -r -s
 deps = readme_renderer
+
+[testenv:checkqa]
+commands =
+    flake8 {toxinidir}
+    bandit -r {toxinidir}
+deps =
+    flake8
+    bandit
