--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ usedevelop = true
 minversion = 1.8
 whitelist_externals = sphinx-build
 envlist =
-    ckeckqa,
+    checkqa,
     readme-py27,
     py{27,34,35,36,py}-dj{18,110,111}
     py{34,35,36,37}-dj20
