Update tested Python & Django versions
Replaces `django.utils.six` with `six` to support newer Django versions.

Updates Tox config to:
- remove unsupported Django versions
- add pypy3
- add Django 2.2
- update djmaster Python versions

--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,10 @@ whitelist_externals = sphinx-build
 envlist =
     checkqa,
     readme-py27,
-    py{27,34,35,36,py}-dj{18,110,111}
-    py{34,35,36,37}-dj20
-    py{35,36,37}-dj{21,master}
+    py{27,34,35,36,py}-dj111
+    py{34,35,36,37,py3}-dj20
+    py{35,36,37,py3}-dj{21,22}
+    py{36,37,38,py3}-dj{30,master}
 
 [testenv]
 usedevelop = true
@@ -18,11 +19,11 @@ setenv =
     coverage: COVERAGE_PROCESS_START = {toxinidir}/setup.cfg
     coverage: _TEST_RUN_PREFIX=coverage run
 deps =
-    dj18: django>=1.8,<1.9
-    dj110: django>=1.10,<1.11
     dj111: django>=1.11,<2.0
     dj20: django>=2.0a1,<2.1
     dj21: django>=2.1a1,<2.2
+    dj22: django>=2.2a1,<3.0
+    dj30: django>=3.0a1<3.1
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
     py27,pypy: mock
     coverage: coverage
