--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,10 @@ whitelist_externals = sphinx-build
 envlist =
     checkqa,
     readme-py27,
-    py{27,34,35,36,py}-dj111
-    py{34,35,36,37,py3}-dj20
-    py{35,36,37,py3}-dj{21,22}
+    py{27,35,36,py}-dj111
+    py{35,36,37,py3}-dj20
+    py{35,36,37,py3}-dj21
+    py{35,36,37,38,py3}-dj22
     py{36,37,38,py3}-dj{30,master}
 
 [testenv]
@@ -23,7 +24,7 @@ deps =
     dj20: django>=2.0a1,<2.1
     dj21: django>=2.1a1,<2.2
     dj22: django>=2.2a1,<3.0
-    dj30: django>=3.0a1<3.1
+    dj30: django>=3.0a1,<3.1
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
     py27,pypy: mock
     coverage: coverage
