--- a/tox.ini
+++ b/tox.ini
@@ -5,20 +5,27 @@ minversion = 1.8
 whitelist_externals = sphinx-build
 envlist =
     checkqa,
-    readme-py27,
+    readme,
     py{27,35,36,py}-dj111
     py{35,36,37,py3}-dj20
     py{35,36,37,py3}-dj21
     py{35,36,37,38,py3}-dj22
     py{36,37,38,py3}-dj{30,master}
 
+[travis]
+python =
+    2.7: py27
+    3.5: py35
+    3.6: py36,flake8,readme
+    3.7: py37
+    3.8: py36
+    pypy3: pypy3
+
 [testenv]
 usedevelop = true
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings.main
     DJANGO_CONFIGURATION = Test
-    coverage: COVERAGE_PROCESS_START = {toxinidir}/setup.cfg
-    coverage: _TEST_RUN_PREFIX=coverage run
 deps =
     dj111: django>=1.11,<2.0
     dj20: django>=2.0a1,<2.1
@@ -27,16 +34,17 @@ deps =
     dj30: django>=3.0a1,<3.1
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
     py27,pypy: mock
-    coverage: coverage
-    coverage: coverage_enable_subprocess
+    coverage
+    coverage_enable_subprocess
 extras = testing
 commands =
     python --version
-    {env:_TEST_RUN_PREFIX:} {envbindir}/django-cadmin test -v2 {posargs:tests}
-    coverage: coverage combine . tests/docs
-    coverage: coverage report -m --skip-covered
+    {envbindir}/coverage run {envbindir}/django-cadmin test -v2 {posargs:tests}
+    coverage combine . tests/docs
+    coverage report -m --skip-covered
+    coverage xml
 
-[testenv:readme-py27]
+[testenv:readme]
 commands = python setup.py check -r -s
 deps = readme_renderer
 
