Add COVERAGE_PROCESS_START env var again.

--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ usedevelop = true
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings.main
     DJANGO_CONFIGURATION = Test
+    COVERAGE_PROCESS_START = {toxinidir}/setup.cfg
 deps =
     dj111: django>=1.11,<2.0
     dj20: django>=2.0a1,<2.1
