Use twine check instead of readme_renderer.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,6 @@ minversion = 1.8
 whitelist_externals = sphinx-build
 envlist =
     checkqa,
-    readme,
     py{27,35,36,py}-dj111
     py{35,36,37,py3}-dj20
     py{35,36,37,py3}-dj21
@@ -45,14 +44,13 @@ commands =
     coverage report -m --skip-covered
     coverage xml
 
-[testenv:readme]
-commands = python setup.py check -r -s
-deps = readme_renderer
-
 [testenv:checkqa]
 commands =
     flake8 {toxinidir}
     bandit -r {toxinidir}
+    python setup.py sdist
+    twine check dist/*
 deps =
     flake8
     bandit
+    twine
