--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ usedevelop = true
 minversion = 1.8
 whitelist_externals = sphinx-build
 envlist =
-    checkqa,
+    py36-checkqa,
     py{27,35,36,py}-dj111
     py{35,36,37,py3}-dj20
     py{35,36,37,py3}-dj21
@@ -44,13 +44,11 @@ commands =
     coverage report -m --skip-covered
     coverage xml
 
-[testenv:checkqa]
+[testenv:py36-checkqa]
 commands =
     flake8 {toxinidir}
-    bandit -r {toxinidir}
     python setup.py sdist
     twine check dist/*
 deps =
     flake8
-    bandit
     twine
