--- a/tox.ini
+++ b/tox.ini
@@ -47,8 +47,10 @@ commands =
 [testenv:py36-checkqa]
 commands =
     flake8 {toxinidir}
+    check-manifest -v
     python setup.py sdist
     twine check dist/*
 deps =
     flake8
     twine
+    check-manifest
