Switch to setuptools-scm.

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,5 +9,5 @@ parallel = 1
 include = configurations/*,tests/*
 
 [flake8]
-exclude = .tox,docs/*
+exclude = .tox,docs/*,.eggs
 ignore = E501,E127,E128,E124,W503
