Add GitHub Actions test workflow.

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ envlist =
     py{35,36,37,38,py3}-dj22
     py{36,37,38,py3}-dj{30,master}
 
-[travis]
+[gh-actions]
 python =
     2.7: py27
     3.5: py35
