--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,7 @@ setenv =
     COVERAGE_PROCESS_START = {toxinidir}/setup.cfg
 deps =
     dj111: django>=1.11,<2.0
+    dj111: dj-email-url<1.0.0
     dj20: django>=2.0a1,<2.1
     dj21: django>=2.1a1,<2.2
     dj22: django>=2.2a1,<3.0
