--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,3 +46,4 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
         name: Python ${{ matrix.python-version }}
+        fail_ci_if_error: true
