--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ minversion = 1.8
 whitelist_externals = sphinx-build
 envlist =
     py36-checkqa,
-    py{36,37,38,py3}-dj{22,30,master}
+    py{36,37,38,py3}-dj{22,30,31,32,master}
 
 [gh-actions]
 python =
@@ -23,6 +23,8 @@ setenv =
 deps =
     dj22: django>=2.2,<3.0
     dj30: django>=3.0,<3.1
+    dj31: django>=3.1,<3.2
+    dj32: https://github.com/django/django/archive/stable/3.2.x.tar.gz#egg=django
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
     coverage
     coverage_enable_subprocess
