Add support for Python 3.9

--- a/tox.ini
+++ b/tox.ini
@@ -5,13 +5,14 @@ minversion = 1.8
 whitelist_externals = sphinx-build
 envlist =
     py36-checkqa,
-    py{36,37,38,py3}-dj{22,30,31,32,master}
+    py{36,37,38,39,py3}-dj{22,30,31,32,master}
 
 [gh-actions]
 python =
     3.6: py36,flake8,readme
     3.7: py37
     3.8: py38
+    3.9: py39
     pypy3: pypy3
 
 [testenv]
@@ -21,9 +22,9 @@ setenv =
     DJANGO_CONFIGURATION = Test
     COVERAGE_PROCESS_START = {toxinidir}/setup.cfg
 deps =
-    dj22: django>=2.2,<3.0
-    dj30: django>=3.0,<3.1
-    dj31: django>=3.1,<3.2
+    dj22: django~=2.2.17
+    dj30: django~=3.0.11
+    dj31: django~=3.1.3
     dj32: https://github.com/django/django/archive/stable/3.2.x.tar.gz#egg=django
     djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
     coverage
