--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,4 @@
-*CODEOWNERS @jazzband/roadies
+CODEOWNERS @jazzband/roadies
+docs/CODEOWNERS @jazzband/roadies
+.github/CODEOWNERS @jazzband/roadies
 .github/workflows/ @jazzband/roadies
