Fix test matrix.

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,9 @@ usedevelop = true
 minversion = 1.8
 whitelist_externals = sphinx-build
 envlist =
-    py36-checkqa,
-    py{36,37,38,39,py3}-dj{22,30,31,32,main}
+    py36-checkqa
+    py{36,37,py3}-dj{22,30,31,32}
+    py{38,39}-dj{2.2,3.0,3.1,main}
 
 [gh-actions]
 python =
