--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ whitelist_externals = sphinx-build
 envlist =
     py36-checkqa
     py{36,37,py3}-dj{22,30,31,32}
-    py{38,39}-dj{2.2,3.0,3.1,main}
+    py{38,39}-dj{22,30,31,main}
 
 [gh-actions]
 python =
@@ -26,8 +26,8 @@ deps =
     dj22: django~=2.2.17
     dj30: django~=3.0.11
     dj31: django~=3.1.3
-    dj32: https://github.com/django/django/archive/stable/3.2.x.tar.gz#egg=django
-    djmain: https://github.com/django/django/archive/main.tar.gz#egg=django
+    dj32: https://github.com/django/django/archive/stable/3.2.x.tar.gz
+    djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     coverage_enable_subprocess
 extras = testing
