Fix test matrix.

--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,8 @@ minversion = 1.8
 whitelist_externals = sphinx-build
 envlist =
     py36-checkqa
-    py{36,37,py3}-dj{22,30,31,32}
-    py{38,39}-dj{22,30,31,main}
+    py{36,37,38,39,py3}-dj{22,30,31,32}
+    py{38,39}-djmain
 
 [gh-actions]
 python =
