--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,9 @@ usedevelop = true
 minversion = 1.8
 whitelist_externals = sphinx-build
 envlist =
-    py36-checkqa,
-    py{36,37,38,39,py3}-dj{22,30,31,32,master}
+    py36-checkqa
+    py{36,37,38,39,py3}-dj{22,30,31,32}
+    py{38,39}-djmain
 
 [gh-actions]
 python =
@@ -25,8 +26,8 @@ deps =
     dj22: django~=2.2.17
     dj30: django~=3.0.11
     dj31: django~=3.1.3
-    dj32: https://github.com/django/django/archive/stable/3.2.x.tar.gz#egg=django
-    djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
+    dj32: https://github.com/django/django/archive/stable/3.2.x.tar.gz
+    djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     coverage_enable_subprocess
 extras = testing
