--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,3 +6,4 @@ recursive-include tests *
 recursive-include docs *
 recursive-include test_project *
 include LICENSE
+include .pre-commit-config.yaml
