--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,9 @@ minversion = 1.8
 whitelist_externals = sphinx-build
 envlist =
     py36-checkqa
-    py{36,37,38,39,py3}-dj{22,31,32}
-    py{38,39,310}-dj{40,main}
+ ​   py{36,37,py3}-dj{22,31,32}
+ ​   py{38,39}-dj{22,31,32,40,main}
+ ​   py{310}-dj{40,main}
 
 [gh-actions]
 python =
@@ -14,7 +15,7 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39
-    "3.10": py10
+    3.10: py10
     pypy3: pypy3
 
 [testenv]
@@ -27,7 +28,7 @@ deps =
     dj22: django~=2.2.17
     dj31: django~=3.1.3
     dj32: django~=3.2.0
-    dj40: django==4.0b1
+ ​   dj40: django>=4.0b1,<4.1
     djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     coverage_enable_subprocess
