Refactor the documentation build process
Significant improvements:
* Allow easy isolated local builds via a dedicated Tox environment
* Configure Sphinx to use consistent packages and theme across local, CI,
  and ReadTheDocs builds; local builds now look the same as the published
  RTD pages
* Explicitly add a ReadTheDocs configuration as code, per their documented
  best practices
* Remove lots of dead code and simplify the Sphinx configuration file
* Build docs in a dedicated CI step and enable stricter warning checking

--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,9 @@
 skipsdist = true
 usedevelop = true
 minversion = 1.8
-whitelist_externals = sphinx-build
 envlist =
     py36-checkqa
+    docs
     py{36,37,py3}-dj{22,31,32}
     py{38,39}-dj{22,31,32,40,main}
     py{310}-dj{32,40,main}
@@ -50,3 +50,16 @@ deps =
     flake8
     twine
     check-manifest
+
+[testenv:docs]
+setenv =
+deps =
+    -r docs/requirements.txt
+commands =
+    sphinx-build \
+        -b html \
+        -a \
+        -W \
+        -n \
+        docs \
+        docs/_build/html
