Update Python and Django versions in tox.ini (#307)
* Update Python and Django versions in tox.ini

- remove Django 3.1
- add Django 4.0b1
- add Python 3.10

* Add python 3.10  in github action matrix

* Update tox.ini from django-debug-toolbar

* Fix whitespaces

* Add missing setup classifiers

* Fix typo in tox.ini

* Remove django 4 classifier

--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,9 @@ minversion = 1.8
 whitelist_externals = sphinx-build
 envlist =
     py36-checkqa
-    py{36,37,38,39,py3}-dj{22,30,31,32}
-    py{38,39}-djmain
+    py{36,37,py3}-dj{22,31,32}
+    py{38,39}-dj{22,31,32,40,main}
+    py{310}-dj{40,main}
 
 [gh-actions]
 python =
@@ -14,6 +15,7 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39
+    3.10: py310
     pypy3: pypy3
 
 [testenv]
@@ -24,9 +26,9 @@ setenv =
     COVERAGE_PROCESS_START = {toxinidir}/setup.cfg
 deps =
     dj22: django~=2.2.17
-    dj30: django~=3.0.11
     dj31: django~=3.1.3
-    dj32: https://github.com/django/django/archive/stable/3.2.x.tar.gz
+    dj32: django~=3.2.0
+    dj40: django>=4.0b1,<4.1
     djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     coverage_enable_subprocess
