Add combining again.

--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,7 @@ extras = testing
 commands =
     python --version
     {envbindir}/coverage run {envbindir}/django-cadmin test -v2 {posargs:tests}
+    coverage combine . tests docs
     coverage report -m --skip-covered
     coverage xml
 
